# ChangeLog for dev-ruby/uuid
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*uuid-2.3.7 (13 Sep 2013)

  13 Sep 2013; Hans de Graaff <graaff@gentoo.org> +uuid-2.3.7.ebuild:
  Version bump.

  25 Jan 2013; Hans de Graaff <graaff@gentoo.org> uuid-2.3.6.ebuild:
  Also install gemspec used to determine version number.

  24 Jan 2013; Hans de Graaff <graaff@gentoo.org> uuid-2.3.6.ebuild:
  Clean up the bin dir that contains a lot of things that should not be there.

*uuid-2.3.6 (22 Jan 2013)

  22 Jan 2013; Hans de Graaff <graaff@gentoo.org> +uuid-2.3.6.ebuild,
  +metadata.xml:
  Initial import.
