@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/uuid
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  27 Jun 2014; Hans de Graaff <graaff@gentoo.org> -uuid-2.3.6.ebuild:
+  Cleanup.
 
 *uuid-2.3.7 (13 Sep 2013)
 
